Controller methods for doses done

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,13 @@
 // Import page-specific CSS files here.
 @import "home";
 
+h1 {
+  color: $orange;
+  font-family: $headers-font;
+}
+
+h2 {
+  color: $red;
+  font-family: $headers-font;
+}
+
