--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,1 +1,4 @@
-<%= simple_form for %>
+<%= simple_form_for(@cocktail) do |f|%>
+<%=f.input :name %>
+<%= f.submit class: "btn btn-primary" %>
+<% end %>
