uploading photo completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
   <body>
 
    <div class="navbar-wagon">
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Blog</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Find more</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Share</a>
   </div>
 
     <%= yield %>
