--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -11,14 +11,16 @@
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <% @cocktails.each do |cocktail| %>
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400, crop: :fill %>')">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo, height: 300, width: 400 %>')">
           <div class="card-category">Popular</div>
           <div class="card-description">
-          <h2><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
             <p>Top cocktail of the month</p>
+          <h2><%= link_to cocktail.name, cocktail_path(cocktail.id) %></h2>
           </div>
         <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
       </div>
         <% end %>
+      </div>
+    </div>
   </div>
 </div>
